widget 08: improve styling + add scrollbar fix + add temp error styling to input

--- a/client/src/main/styles/_var.scss
+++ b/client/src/main/styles/_var.scss
@@ -52,7 +52,7 @@ $color-x-dark-indigo: #232F5A;
 $color-x-light-purple: #EFE7F9;
 $color-light-purple: #C5B2E8;
 $color-medium-purple: #8159bc;
-$color-muted-purple: #6E5084;
+$color-muted-purple: #593d6e;
 $color-dark-purple: #602CA2;
 
 // Widget 09 (magenta)
